src/test/ui/directory_ownership/non-inline-mod-restriction.stderr
error: cannot declare a non-inline module inside a block unless it has a path attribute
  --> $DIR/non-inline-mod-restriction.rs:4:5
   |
LL |     mod foo;
   |     ^^^^^^^^

error: aborting due to previous error

